[gd_scene load_steps=30 format=3 uid="uid://b56mrg8633ijo"]

[ext_resource type="Script" path="res://Scripts/Hero.gd" id="1_nhwvj"]
[ext_resource type="Texture2D" uid="uid://wb4sdmvkyv3n" path="res://Assets/Character/3 Dude_Monster/Dude_Monster_Death_8.png" id="2_depky"]
[ext_resource type="PackedScene" uid="uid://ljpq82wonmvy" path="res://Scenes/bullet.tscn" id="2_goyec"]
[ext_resource type="Texture2D" uid="uid://oscj6jc8u2eu" path="res://Assets/Character/3 Dude_Monster/Dude_Monster_Idle_4.png" id="2_o5m7i"]
[ext_resource type="Texture2D" uid="uid://kiy23d7tqtpb" path="res://Assets/Character/3 Dude_Monster/Dude_Monster_Run_6.png" id="3_sqi35"]
[ext_resource type="AudioStream" uid="uid://d4j3dxww3c2xf" path="res://Assets/Other/Music/Steps.mp3" id="5_d2v2l"]
[ext_resource type="PackedScene" uid="uid://c0a2gafq8i4u0" path="res://Scenes/pistol.tscn" id="6_nb3on"]
[ext_resource type="AudioStream" uid="uid://dvi00f6f3nyb2" path="res://Assets/Other/Music/Pistol_fire.mp3" id="8_n31pp"]

[sub_resource type="AtlasTexture" id="AtlasTexture_8cdkg"]
atlas = ExtResource("2_depky")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_o7uuq"]
atlas = ExtResource("2_depky")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_lygrt"]
atlas = ExtResource("2_depky")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ku0kc"]
atlas = ExtResource("2_depky")
region = Rect2(96, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_pcum6"]
atlas = ExtResource("2_depky")
region = Rect2(128, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_vxdja"]
atlas = ExtResource("2_depky")
region = Rect2(160, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_glmmb"]
atlas = ExtResource("2_depky")
region = Rect2(192, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_dr07k"]
atlas = ExtResource("2_depky")
region = Rect2(224, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_oti8u"]
atlas = ExtResource("2_o5m7i")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ayk86"]
atlas = ExtResource("2_o5m7i")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_77nvj"]
atlas = ExtResource("2_o5m7i")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_qqjqn"]
atlas = ExtResource("2_o5m7i")
region = Rect2(96, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_jql74"]
atlas = ExtResource("3_sqi35")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_04skf"]
atlas = ExtResource("3_sqi35")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ilytj"]
atlas = ExtResource("3_sqi35")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_al4ut"]
atlas = ExtResource("3_sqi35")
region = Rect2(96, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_dujdy"]
atlas = ExtResource("3_sqi35")
region = Rect2(128, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_gxp7b"]
atlas = ExtResource("3_sqi35")
region = Rect2(160, 0, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_e6676"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_8cdkg")
}, {
"duration": 2.0,
"texture": SubResource("AtlasTexture_o7uuq")
}, {
"duration": 1.5,
"texture": SubResource("AtlasTexture_lygrt")
}, {
"duration": 2.0,
"texture": SubResource("AtlasTexture_ku0kc")
}, {
"duration": 2.0,
"texture": SubResource("AtlasTexture_pcum6")
}, {
"duration": 2.0,
"texture": SubResource("AtlasTexture_vxdja")
}, {
"duration": 3.0,
"texture": SubResource("AtlasTexture_glmmb")
}, {
"duration": 3.0,
"texture": SubResource("AtlasTexture_dr07k")
}],
"loop": true,
"name": &"death",
"speed": 7.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_oti8u")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ayk86")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_77nvj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qqjqn")
}],
"loop": true,
"name": &"idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_jql74")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_04skf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ilytj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_al4ut")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dujdy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gxp7b")
}],
"loop": true,
"name": &"run",
"speed": 8.0
}]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_qwn10"]
radius = 7.0
height = 14.0

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_jn807"]

[node name="Hero" type="CharacterBody2D"]
script = ExtResource("1_nhwvj")
bullet_scene = ExtResource("2_goyec")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(0, -16)
sprite_frames = SubResource("SpriteFrames_e6676")
animation = &"death"
autoplay = "idle"
frame_progress = 0.713386

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-2, -8)
shape = SubResource("CapsuleShape2D_qwn10")

[node name="Camera2D" type="Camera2D" parent="."]
zoom = Vector2(2, 2)

[node name="death_timer" type="Timer" parent="."]
wait_time = 2.3

[node name="HpRegen" type="Timer" parent="."]
wait_time = 2.0
autostart = true

[node name="hitbox" type="Area2D" parent="."]
collision_mask = 32

[node name="CollisionShape2D" type="CollisionShape2D" parent="hitbox"]
position = Vector2(0, -13)
shape = SubResource("CapsuleShape2D_jn807")

[node name="Pistol" parent="." instance=ExtResource("6_nb3on")]
position = Vector2(12, -25)

[node name="Muzzle" type="Marker2D" parent="."]
position = Vector2(15, -25)

[node name="TimersWeapon" type="Node2D" parent="."]

[node name="PistolTimer" type="Timer" parent="TimersWeapon"]
autostart = true

[node name="Sounds" type="Node2D" parent="."]

[node name="Pistol" type="AudioStreamPlayer" parent="Sounds"]
stream = ExtResource("8_n31pp")
volume_db = -15.0

[node name="Steps" type="AudioStreamPlayer" parent="Sounds"]
stream = ExtResource("5_d2v2l")

[connection signal="animation_finished" from="AnimatedSprite2D" to="." method="_on_animated_sprite_2d_animation_finished"]
[connection signal="timeout" from="death_timer" to="." method="_on_death_timer_timeout"]
[connection signal="timeout" from="HpRegen" to="." method="_on_hp_regen_timeout"]
[connection signal="timeout" from="TimersWeapon/PistolTimer" to="." method="_on_pistol_timer_timeout"]
